# Manifast

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build_wasm.bat  fix_cmake.py  fix_cmake_again.py  fix_merge.sh  install.ps1  install.sh  llvm.sh  manifast.ps1  manifast.sh  patch.diff  patch_fix.diff  tes.mnf  test_run.tmp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
build-wasm/: manifast.js  manifast.wasm
docs/: GRAMMAR.md  INSTALLING.md  index.html  llms.txt  manifast.js  manifast.wasm
include/manifast/: AST.h  CodeGen.h  Lexer.h  Parser.h  PlotBackend.h  Runtime.h  SyntaxConfig.h  Token.h
include/manifast/Utils/: Path.h  Process.h
include/manifast/VM/: Chunk.h  Compiler.h  OpCode.h  VM.h
src/cmd/: CMakeLists.txt  main.cpp
src/cmd/mifast/: main.cpp
src/cmd/mifastc/: main.cpp
src/lib/: CMakeLists.txt  CodeGen.cpp  Compiler.cpp  Lexer.cpp  Parser.cpp  PlotBackend.cpp  Runtime.cpp  VM.cpp  VM.cpp.orig
src/wasm/: CMakeLists.txt  bindings.cpp  fix_js.js  index.html  robots.txt
tests/: CMakeLists.txt  TestMain.cpp
tests/Manifast/: test.mnf
tests/core/: arrays.mnf  exceptions.mnf  objects.mnf  operators.mnf
tests/core/builtins/: array_get_oob.mnf  array_manipulation.mnf  math_extended.mnf  math_usage.mnf  string_manipulation.mnf
tests/core/capi/: CMakeLists.txt  test_array_get.cpp  test_array_push.cpp
tests/core/codegen/: codegen.mnf
tests/core/control_flow/: exceptions.mnf  for_statement.mnf  if_statement.mnf  loops.mnf
tests/core/literals/: arrays.mnf  literals.mnf  objects.mnf  operators.mnf  test.mnf
tests/core/logic/: short_circuit.mnf
tests/core/oop/: class_tests.mnf
tests/core/plot/: CMakeLists.txt  test_plot_backend.cpp
tests/core/scoping/: scope.mnf
tests/core/types/: type_enforcement.mnf  type_enforcement_fail.mnf
tests/cpp/: CMakeLists.txt  RuntimeTest.cpp  test_bindings.cpp  test_manifast_object_set_raw.cpp  test_parser.cpp  test_runtime.cpp  test_wasm_print_any.cpp  vm_test.cpp
tests/lib/: RuntimeTest.cpp
tests/os/: read_write.mnf
tests/plot/: plot_basic.mnf
tests/unit/: CMakeLists.txt  ParserErrorTest.cpp
tests/wasm/: run_tests.js  test_wasm.js
tests/wasm/suites/: core.js  logic.js  math.js  oop.js  recursion.js
